--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -19,19 +19,17 @@
     overflow: hidden;
 }
 
-.projects-slider {
+.projects-slides {
     display: flex;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
 
+    transition: all ease-in-out 1s;
+
     .slide-link {
         margin-left: 18px;
         margin-right: 18px;
-    }
-
-    .slide-link:first-child, .slide-link:last-child {
-        margin-left: 0;
     }
 
     .project
@@ -66,4 +64,33 @@
         }
     }
 }
+
+
+.slider-navigation {
+    position: absolute;
+
+    display: flex;
+    justify-content: space-between;
+
+    margin: 0 10px;
+
+
+    .slider-prev, .slider-next {
+        background-color: $turquoise;
+        width: 50px;
+        height: 50px;
+        border-radius: 25px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .slider-prev {
+    }
+    
+    .slider-next {
+    }
+}
+
 
