--- a/assets/scss/_design-elements.scss
+++ b/assets/scss/_design-elements.scss
@@ -14,7 +14,8 @@
         align-items: center;
         height: 55px;
         width: 55px;
-    
+
+        transition: all 1s ease;
         @include breakpoint-up("md"){
             height: 105px;
             width: 105px;
