chore(projects): add margin to projects container

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -675,6 +675,10 @@ body {
   }
 }
 
+.projects {
+  margin-bottom: 50px;
+}
+
 .projects-flex-container {
   display: flex;
   flex-direction: column;
