fix(experience): responsive layout of section
change grid to flex;
fix bug with flex item ordering with transition time 1s;

--- a/assets/scss/_experience.scss
+++ b/assets/scss/_experience.scss
@@ -1,12 +1,41 @@
 .experience-grid {
-    margin-left: 24px;
-    margin-right: 24px;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+    margin-left: 6px;
+    margin-right: 6px;
+
+    margin-bottom: 50px;
+
+    @include breakpoint-up("md"){
+        margin-left: 24px;
+        margin-right: 24px;
+
+    }
+}
+
+.experience-flex {
+    display: flex;
+    flex-direction: column;
+
+    @include breakpoint-up("lg"){
+        flex-direction: row;
+    }
 }
 
 .job-period {
-    margin-right: 16px;
+    display: flex;
+    flex: 2;
+    order: 2;
+    flex-direction: column;
+    
+    align-items: end;
+
+    margin-bottom: 50px;
+    
+    @include breakpoint-up("lg"){
+        order: 1;
+        align-items: start;
+        margin-bottom: 0;
+        margin-right: 16px;
+    }
 
 
     &__total {
@@ -20,12 +49,24 @@
     }
 }
 
-.job {
+.job {  
+    display: flex;
+    flex: 3;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 12px;
 
-    margin-bottom: 50px;
+    
+    @include breakpoint-up("lg"){
+        order: 2;
+        align-items: start;
+        margin-bottom: 50px;
+    }
+
 
     &__company-name {
         margin-bottom: 14px;
+        
     }
     &__position {
         margin-bottom: 14px;
