refactor(layout): combine duplicated margin styles

--- a/assets/scss/_experience.scss
+++ b/assets/scss/_experience.scss
@@ -1,14 +1,14 @@
 .experience-grid {
-    margin-left: 6px;
-    margin-right: 6px;
+    // margin-left: 6px;
+    // margin-right: 6px;
 
     margin-bottom: 50px;
 
-    @include breakpoint-up("md"){
-        margin-left: 24px;
-        margin-right: 24px;
+    // @include breakpoint-up("md"){
+    //     margin-left: 24px;
+    //     margin-right: 24px;
 
-    }
+    // }
 }
 
 .experience-flex {
