--- a/assets/scss/_containers.scss
+++ b/assets/scss/_containers.scss
@@ -61,6 +61,17 @@ body {
         padding-left: 1.5rem; // 24px; 
     }
 
+
+    &--my {
+        margin-left: 6px;
+        margin-right: 6px;
+
+        @include breakpoint-up("md"){
+            margin-left: 24px;
+            margin-right: 24px;
+        }
+    }
+
     
 }
 
