fix(links styles): fix mixed <a> styles

--- a/assets/scss/_biography.scss
+++ b/assets/scss/_biography.scss
@@ -11,6 +11,12 @@
         }
     }
 
+    & > a, a:link, a:visited {
+        color: $turquoise-light;
+        text-decoration: underline;
+    }
 }
+
+
 
     
