feat(footer): done footer with responsive layout

--- a/assets/scss/_containers.scss
+++ b/assets/scss/_containers.scss
@@ -6,7 +6,7 @@ body {
 
 .main-wrapper {
     flex-grow: 1;
-    height: 600vh; // удалить, после вёрстки
+    //height: 600vh; // удалить, после вёрстки
     background-color: $purple-dark;
 
     overflow: hidden;
