--- a/assets/scss/_experience.scss
+++ b/assets/scss/_experience.scss
@@ -2,7 +2,7 @@
     // margin-left: 6px;
     // margin-right: 6px;
 
-    margin-bottom: 50px;
+    //margin-bottom: 50px;
 
     // @include breakpoint-up("md"){
     //     margin-left: 24px;
